--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
-  "name": "cat-ui",
+  "name": "dnd-project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "eslint": "^6.8.0",
+    "eslint-plugin-flowtype": "^3.13.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.0",
+    "react-webcam": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "typescript": "^3.9.6",
+    "yargs-parser": "^18.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,5 +43,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "file-loader": "^6.0.0",
+    "minimist": "^1.2.5",
+    "url-loader": "^4.1.0"
   }
 }
